<resources>
    <string name="app_name">Perfect Notes</string>
    <string name="change_date_text">Change date</string>
    <string name="datepicker_header">Please set date of note created</string>
    <string name="settings_button_descr">Settings</string>
    <string name="about_button_descr">About</string>
    <string name="settings_title_text">Here is something settings. Your note details will look like (click on this for showing):</string>
    <string name="note_title_example">Название заметки</string>
    <string name="note_text_example">Пример основного текста заметки</string>
    <string name="notes_list_title_on_appbar">Notes</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_add_img_or_link">Add image or link</string>
    <string name="action_add_img">Add image</string>
    <string name="action_add_link">Add link</string>
    <string name="open_drawer">Show menu</string>
    <string name="close_drawer">Hide menu</string>
    <string name="settings_header">Settings</string>
    <string name="goto_notes">Notes list</string>
    <string name="author_link">dorbugstudio.com</string>
    <string name="app_version">v 0.0.1</string>
    <string name="background_description">Background image</string>
    <string name="action_delete">Delete note</string>
    <string name="note_delete_gialog_title">Delete note</string>
    <string name="note_delete_gialog_question">Are you sure want to delete note with title %s?</string>
    <string name="yes_word">Yes</string>
    <string name="no_word">No</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="action_edit">Edit note</string>
    <string name="action_save">Save</string>
</resources>