<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit_icon"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share_icon"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_img"
        android:icon="@drawable/add_image_icon"
        android:title="@string/action_add_img"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_link"
        android:icon="@drawable/add_link_icon"
        android:title="@string/action_add_link"
        app:showAsAction="ifRoom" />

</menu>