<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_drawer_header_height">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/dorbug_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/navigation_drawer_header_paddingstart"
        android:paddingTop="@dimen/navigation_drawer_header_paddingtop"
        android:paddingEnd="@dimen/zero_value">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="@dimen/zero_value"
            android:layout_height="@dimen/navigation_drawer_header_title_height"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/navigation_drawer_header_title_textsize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/author_link"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:text="@string/author_link"
            android:textColor="@color/white"
            android:textSize="@dimen/navigation_drawer_header_link_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title" />

        <TextView
            android:id="@+id/version"
            android:layout_width="@dimen/zero_value"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:textSize="@dimen/navigation_drawer_header_version_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_link" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>